@@ -1,12 +1,15 @@
-                CHANGES IN TraMineRextras VERSION 0.5.4 [2018-09-20] (Development version)
+                CHANGES IN TraMineRextras VERSION 0.5.4 [2018-10-02] (Development version)
 
 Changes in existing functions
     o   No changes.
-    
+
 Bug fixes
-    o   seqsurv(): levels of spell$states were not ordered conformably 
-        with the alphabet of the state sequence object, which 
-        caused plot.ststlist.surv() to use wrong colors for the survival curves when 'per.state=FALSE'.
+    o   seqsurv(): levels of spell$states were not ordered conformably
+        with the alphabet of the state sequence object, which
+        caused plot.ststlist.surv() to use wrong colors for the 
+        survival curves when 'per.state=FALSE'.
+    o   seqsplot(): color synchronization failed with 'per.state=FALSE' 
+        when one of the states selected was unobserved in one of the groups.
 
 
 
